--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
+        "@vitejs/plugin-vue": "^3.1.2",
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.2",
         "axios": "^0.27",
@@ -16,7 +17,7 @@
         "vite": "^3.0.0"
     },
     "dependencies": {
-        "@vitejs/plugin-vue": "^3.1.2",
+        "pinia": "^2.0.23",
         "vue": "^3.2.40"
     }
 }
